# LangGraph_DeepSearch

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  langgraph.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  test.yml
src/: cli.py  config.py  go.ipynb  llm.py
src/embeddings/: qwen_embedder.py
src/graphs/: __init__.py  learn_graph.py  web_search_graph.py
src/nodes/: __init__.py  learning_nodes.py  nodes.py  question_nodes.py  review_nodes.py  search_nodes.py
src/prompts/: __init__.py  learning_prompts.py  search_prompts.py
src/state/: __init__.py  states.py
src/tools/: __init__.py  consult_note.py  search_tool.py
tests/: test_graphs.py  test_nodes.py  test_tools.py
