[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendeepsearch-langgraph"
version = "0.1.0"
description = "A LangGraph-based implementation of OpenDeepSearch"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Eric Ding", email = "eric.ding25@imperial.ac.uk"}
]
keywords = ["langgraph", "search", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "crawl4ai>=0.2.0",
    "jina>=3.0.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/EricKing22/LangGraph_DeepSearch"
Documentation = "https://github.com/EricKing22/LangGraph_DeepSearch#readme"
Repository = "https://github.com/EricKing22/LangGraph_DeepSearch.git"
