[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LangGraph_DeepSearch"
version = "0.1.0"
description = "A LangGraph-based implementation of Deep Search"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Eric Ding", email = "eric.ding25@imperial.ac.uk"}
]
keywords = ["langgraph", "search", "ai", "llm", "deep search"]

dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-tavily>=0.1.0",
    "langgraph-cli[inmem]",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
deepsearch = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/EricKing22/LangGraph_DeepSearch"
Documentation = "https://github.com/EricKing22/LangGraph_DeepSearch#readme"
Repository = "https://github.com/EricKing22/LangGraph_DeepSearch.git"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
